[gd_scene load_steps=17 format=3 uid="uid://d0m6l0xlyba88"]

[ext_resource type="Script" path="res://scenes/enemies/tethered_enemies/shroom_big/shroom_big.gd" id="1_lptre"]
[ext_resource type="Texture2D" uid="uid://bvqwmcbey2kg5" path="res://assets/enemies/shroom_big_001.png" id="1_osb0m"]
[ext_resource type="Resource" uid="uid://2nth16efvpml" path="res://scenes/enemies/tethered_enemies/shroom_big/enemy_shroom_big.tres" id="2_ntddt"]
[ext_resource type="Script" path="res://scripts/components/hurtbox.gd" id="4_qntyj"]
[ext_resource type="Script" path="res://scenes/enemies/tethered_enemies/tethered_enemies.gd" id="5_nbpqh"]
[ext_resource type="PackedScene" uid="uid://dv76brcp2gvum" path="res://scenes/enemies/tethered_enemies/shroom_big/particles/spore_explosion.tscn" id="6_8j3c6"]
[ext_resource type="Script" path="res://scripts/components/hitbox.gd" id="7_efl7s"]

[sub_resource type="Gradient" id="Gradient_x5aqw"]
offsets = PackedFloat32Array(0, 0.460829, 0.790323)
colors = PackedColorArray(1, 1, 1, 1, 0.199732, 0.199732, 0.199732, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aaw0i"]
gradient = SubResource("Gradient_x5aqw")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_s6lum"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_0uoak"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_07wsb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5c6hl"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3wjje"]
resource_name = "attack_anticipation"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0w06"]
_data = {
"RESET": SubResource("Animation_07wsb"),
"attack": SubResource("Animation_5c6hl"),
"attack_anticipation": SubResource("Animation_3wjje")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_rkcb3"]
radius = 0.01

[node name="ShroomBig" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 32
collision_mask = 128
script = ExtResource("1_lptre")
resource = ExtResource("2_ntddt")

[node name="Tethered" type="Node2D" parent="."]
script = ExtResource("5_nbpqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -3)
texture = ExtResource("1_osb0m")
offset = Vector2(2.08165e-12, 10)
hframes = 9

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 8)
color = Color(0, 0.717361, 0.721896, 1)
energy = 0.8
texture = SubResource("GradientTexture2D_aaw0i")
texture_scale = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CircleShape2D_s6lum")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("4_qntyj")
type = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 15)
shape = SubResource("CircleShape2D_0uoak")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0w06")
}
speed_scale = 2.0

[node name="CPUParticles2D" parent="." instance=ExtResource("6_8j3c6")]

[node name="HitBox" type="Area2D" parent="."]
monitorable = false
script = ExtResource("7_efl7s")
type = 1
damage = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = -1.5708
shape = SubResource("CircleShape2D_rkcb3")

[connection signal="freed" from="Tethered" to="." method="_on_tethered_freed"]
